--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Notes" />
-    <meta property="og:description" content="Web statis buat nyimpen kode nulir. Data disimpan di browser jadi ane gak bisa ngintip :v" />
+    <meta property="og:description" content="Web statis buat nyimpen kode nuklir. Data disimpan di browser jadi ane gak bisa ngintip :v" />
     <meta property="og:image" content="{{ url_for('img', filename='ogimage.jpg') }}" />
     <title>Notes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
