--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Notes" />
     <meta property="og:description" content="Web statis buat nyimpen kode nuklir. Data disimpan di browser jadi ane gak bisa ngintip :v" />
-    <meta property="og:image" content="{{ url_for('img', filename='ogimage.jpg') }}" />
+    <meta property="og:image" content="img/ogimage.jpg" />
     <title>Notes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
