Change card width property

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         .note-card {
-            width: 16rem;
+            width: auto;
             height: 12rem;
             transition: transform 0.2s ease-in-out;
         }
