--- a/index.html
+++ b/index.html
@@ -57,90 +57,7 @@
 
     <section id="note-cards-section" class="container my-4 pb-4">
         <div class="row d-flex flex-row" id="note-cards">
-            <div class="col col-sm-6 col-lg-4 col-xl-3">
-                <div class="my-2 note-card card border-dark rounded-0">
-                    <div class="card-body clickable" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text text-truncate">Some quick example text to build on the card title and make
-                            up the bulk of the
-                            card's content.</p>
-                    </div>
-                    <div class="row">
-                        <div class="col"></div>
-                        <button class="col btn btn-outline-danger mx-4 mb-3 rounded-0" type="button">Delete</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-sm-6 col-lg-4 col-xl-3">
-                <div class="my-2 note-card card border-dark rounded-0">
-                    <div class="card-body clickable" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text text-truncate">Some quick example text to build on the card title and make
-                            up the bulk of the
-                            card's content.</p>
-                    </div>
-                    <div class="row">
-                        <div class="col"></div>
-                        <button class="col btn btn-outline-danger mx-4 mb-3 rounded-0" type="button">Delete</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-sm-6 col-lg-4 col-xl-3">
-                <div class="my-2 note-card card border-dark rounded-0">
-                    <div class="card-body clickable" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text text-truncate">Some quick example text to build on the card title and make
-                            up the bulk of the
-                            card's content.</p>
-                    </div>
-                    <div class="row">
-                        <div class="col"></div>
-                        <button class="col btn btn-outline-danger mx-4 mb-3 rounded-0" type="button">Delete</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-sm-6 col-lg-4 col-xl-3">
-                <div class="my-2 note-card card border-dark rounded-0">
-                    <div class="card-body clickable" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text text-truncate">Some quick example text to build on the card title and make
-                            up the bulk of the
-                            card's content.</p>
-                    </div>
-                    <div class="row">
-                        <div class="col"></div>
-                        <button class="col btn btn-outline-danger mx-4 mb-3 rounded-0" type="button">Delete</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-sm-6 col-lg-4 col-xl-3">
-                <div class="my-2 note-card card border-dark rounded-0">
-                    <div class="card-body clickable" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text text-truncate">Some quick example text to build on the card title and make
-                            up the bulk of the
-                            card's content.</p>
-                    </div>
-                    <div class="row">
-                        <div class="col"></div>
-                        <button class="col btn btn-outline-danger mx-4 mb-3 rounded-0" type="button">Delete</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-sm-6 col-lg-4 col-xl-3">
-                <div class="my-2 note-card card border-dark rounded-0">
-                    <div class="card-body clickable" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text text-truncate">Some quick example text to build on the card title and make
-                            up the bulk of the
-                            card's content.</p>
-                    </div>
-                    <div class="row">
-                        <div class="col"></div>
-                        <button class="col btn btn-outline-danger mx-4 mb-3 rounded-0" type="button">Delete</button>
-                    </div>
-                </div>
-            </div>
+            <!-- Note cards will be dynamically added here -->
         </div>
     </section>
 
