Add search functionality to notes and improve navbar layout

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 </head>
 
 <body>
-    <nav class="navbar border-bottom border-dark">
+    <nav class="navbar border-bottom border-dark position-sticky top-0 z-3 bg-white">
         <div class="container justify-content-between my-2">
-            <a class="navbar-brand fs-2">Notes</a>
+            <input type="text" id="search-input" class="border-dark rounded-0 form-control w-auto" placeholder="Search">
             <button class="btn btn-outline-dark me-2 rounded-0" type="button" onclick="newNote()">+ New</button>
         </div>
     </nav>
